style: apply obsidian background and ensure hidden overflow for cinematic feel

--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@
 }
 
 body {
-
   height: 100vh;
   width: 100vw;
-  background-color: black;
+  background-color: var(--obsidian);
   margin: 0rem;
   overflow: hidden;
 }
+
 
 #image-track {
   display: flex;
